Add album download feature
